[package]
name = "countryip"
version = "0.1.0"
authors = ["Racci <racci@racci.dev"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/DaRacci/country-ip"
categories = ["command-line-utilities"]
keywords = ["country", "ip", "geoip", "geo"]
description = "Get a random IP address from a country."

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["default"] }
async-std = { version = "1.12.0", features = ["tokio1"] }
anyhow = { version = "1.0.68", features = ["default"] }
simplelog = { version = "0.12.0", features = ["paris"] }
rust_iso3166 = "0.1.7"
rand = "0.8.5"
tokio = { version = "1.24.1", features = ["rt", "macros"] }
parallel-stream = "2.1.3"
